# EasyEngine

./: CMakeLists.txt  CMakeLists.txt.glfw  README.md
engine/: CMakeLists.txt
engine/include/: camera.h  window.h
engine/include/geometry/: BoxGeometry.h  BufferGeometry.h  PlaneGeometry.h  SphereGeometry.h
engine/include/glad/: glad.h
engine/include/shader/: shader.h
engine/include/tool/: shader.h
engine/lib/: glfw3.lib
engine/source/: camera.cpp  glad.c  main.cpp  window.cpp
engine/source/GLSL/: fragment.glsl  framebuffer_frag.glsl  framebuffer_vert.glsl  vertex.glsl
engine/source/geometry/: BoxGeometry.cpp  BufferGeometry.cpp  PlaneGeometry.cpp  SphereGeometry.cpp
engine/source/shader/: shader.cpp
engine/source/tool/: shader.cpp
